--- a/ryan.moore.site-web/pom.xml
+++ b/ryan.moore.site-web/pom.xml
@@ -114,6 +114,12 @@
                     </execution>
                 </executions>
                 <dependencies>
+                     <dependency>
+                       <groupId>javax.jdo</groupId>
+                       <artifactId>jdo2-api</artifactId>
+                       <version>2.3-ec</version>
+                       <scope>runtime</scope>
+                     </dependency>
                     <dependency>
                         <groupId>org.datanucleus</groupId>
                         <artifactId>datanucleus-core</artifactId>
