--- a/ryan.moore.site-externalServices/pom.xml
+++ b/ryan.moore.site-externalServices/pom.xml
@@ -3,18 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.ryan.moore</groupId>
-    <artifactId>ryan.moore.site-parent</artifactId>
-    <packaging>pom</packaging>
+    <parent>
+        <groupId>org.ryan.moore</groupId>
+        <artifactId>ryan.moore.site-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>ryan.moore.site-externalServices</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Ryan Moore Site Parent</name>
+    <name>Ryan Moore Site External Services</name>
 
-    <modules>
-        <module>../ryan.moore.site-model</module>
-        <module>../ryan.moore.site-externalServices</module>
-        <module>../ryan.moore.site-web</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
