--- a/ryan.moore.site-externalServices/pom.xml
+++ b/ryan.moore.site-externalServices/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
